сделал псевдоклассы в сасс

--- a/portfolio.html
+++ b/portfolio.html
@@ -159,58 +159,76 @@
             </div>
         </section>
     </main>
-    <!-- Футер -->
-    <footer class="bottom">
-        <div class="container container-futer">
-            <div class="bottom-futer">
-                <a lang="en" class="bottom-logo" href="WebStudio" class="link">Web<span>Studio</span></a>
-                <ul class="bottom-list link list">
-                    <!--<li lang="en" class="bottom-logo"><a href="WebStudio" class="link">Web<span>Studio</span></a></li>-->
-                    <li>
-                        <address>
-                            г. Киев, пр-т Леси Украинки, 26
-                        </address>
-                    </li>
-                    <li lang="en"><a href="mailto:info@example.com" class="link-bottom link">info@example.com</a></li>
-                    <li><a href="tel:+380991111111" class="link-bottom link">+38 099 111 11 11</a></li>
-                </ul>
+        <!-- Футер -->
+        <footer class="bottom">
+            <div class="container container-futer">
+                <div class="bottom-futer">
+                    <a lang="en" class="bottom-logo" href="WebStudio" class="link">Web<span>Studio</span></a>
+                    <ul class="bottom-list link list">
+                        <!--<li lang="en" class="bottom-logo"><a href="WebStudio" class="link">Web<span>Studio</span></a></li>-->
+                        <li>
+                            <address>
+                                г. Киев, пр-т Леси Украинки, 26
+                            </address>
+                        </li>
+                        <li lang="en"><a href="mailto:info@example.com" class="link-bottom link">info@example.com</a></li>
+                        <li><a href="tel:+380991111111" class="link-bottom link">+38 099 111 11 11</a></li>
+                    </ul>
+                </div>
+                <div class="icons-futer">
+                    <h2>ПРИСОЕДИНЯЙТЕСЬ</h2>
+        
+                    <ul class="masters-socials masters-socials-futer list socials-list">
+                        <li class="socials-item socials-item-futer">
+                            <a href="" class="socials-link socials-link-futer link">
+                                <svg class="socials-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="socials-item socials-item-futer">
+                            <a href="" class="socials-link socials-link-futer link">
+                                <svg class="socials-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="socials-item socials-item-futer">
+                            <a href="" class="socials-link socials-link-futer link">
+                                <svg class="socials-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="socials-item socials-item-futer">
+                            <a href="" class="socials-link socials-link-futer link">
+                                <svg class="socials-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div class="form-futer-box">
+                <form action="" class="js-speaker-form form-futer">
+                    <div class="form-field-futer icons-futer">
+                        <h2>ПОДПИШИСЬ НА РАССЫЛКУ</h2>
+                        <!-- <label for="mail">Почта</label>-->
+                        <ul class="form-futer-icon">
+                            <li>
+                                <input type="email" name="mail" id="mail" placeholder="E-mail" />
+                            </li>
+                            <li>
+                                <button class="button button-futer" type="submit">Подписаться<svg class="icon-icon-send"
+                                        width="32" height="32">
+                                        <use href="./images/icons.svg#icon-icon-send"></use>
+                                    </svg></button>
+                            </li>
+                        </ul>
+                    </div>
+                </form>
             </div>
-            <div class="icons-futer">
-                <h2>ПРИСОЕДИНЯЙТЕСЬ</h2>
+        </footer>
     
-                <ul class="masters-socials masters-socials-futer list socials-list">
-                    <li class="socials-item socials-item-futer">
-                        <a href="" class="socials-link socials-link-futer link">
-                            <svg class="socials-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="socials-item socials-item-futer">
-                        <a href="" class="socials-link socials-link-futer link">
-                            <svg class="socials-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="socials-item socials-item-futer">
-                        <a href="" class="socials-link socials-link-futer link">
-                            <svg class="socials-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="socials-item socials-item-futer">
-                        <a href="" class="socials-link socials-link-futer link">
-                            <svg class="socials-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </footer>
 
 
 </body>
