--- a/portfolio.html
+++ b/portfolio.html
@@ -159,9 +159,10 @@
             </div>
         </section>
     </main>
+
         <!-- Футер -->
         <footer class="bottom">
-            <div class="container container-futer">
+            <div class="container">
                 <div class="bottom-futer">
                     <a lang="en" class="bottom-logo" href="WebStudio" class="link">Web<span>Studio</span></a>
                     <ul class="bottom-list link list">
@@ -171,55 +172,56 @@
                                 г. Киев, пр-т Леси Украинки, 26
                             </address>
                         </li>
-                        <li lang="en"><a href="mailto:info@example.com" class="link-bottom link">info@example.com</a></li>
-                        <li><a href="tel:+380991111111" class="link-bottom link">+38 099 111 11 11</a></li>
+                        <li lang="en"><a href="mailto:info@example.com"
+                                class="bottom-list__link-bottom link">info@example.com</a></li>
+                        <li><a href="tel:+380991111111" class="bottom-list__link-bottom link">+38 099 111 11 11</a></li>
                     </ul>
                 </div>
                 <div class="icons-futer">
                     <h2>ПРИСОЕДИНЯЙТЕСЬ</h2>
         
-                    <ul class="masters-socials masters-socials-futer list socials-list">
-                        <li class="socials-item socials-item-futer">
-                            <a href="" class="socials-link socials-link-futer link">
-                                <svg class="socials-icon" width="20" height="20">
+                    <ul class="masters-socials masters-socials-futer list">
+                        <li class="masters-socials__socials-item masters-socials-futer__item">
+                            <a href="" class="masters-socials__socials-link masters-socials-futer__link link">
+                                <svg class="masters-socials__socials-icon" width="20" height="20">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="socials-item socials-item-futer">
-                            <a href="" class="socials-link socials-link-futer link">
-                                <svg class="socials-icon" width="20" height="20">
+                        <li class="masters-socials__socials-item masters-socials-futer__item">
+                            <a href="" class="masters-socials__socials-link masters-socials-futer__link link">
+                                <svg class="masters-socials__socials-icon" width="20" height="20">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="socials-item socials-item-futer">
-                            <a href="" class="socials-link socials-link-futer link">
-                                <svg class="socials-icon" width="20" height="20">
+                        <li class="masters-socials__socials-item masters-socials-futer__item">
+                            <a href="" class="masters-socials__socials-link masters-socials-futer__link link">
+                                <svg class="masters-socials__socials-icon" width="20" height="20">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="socials-item socials-item-futer">
-                            <a href="" class="socials-link socials-link-futer link">
-                                <svg class="socials-icon" width="20" height="20">
+                        <li class="masters-socials__socials-item masters-socials-futer__item">
+                            <a href="" class="masters-socials__socials-link masters-socials-futer__link link">
+                                <svg class="masters-socials__socials-icon" width="20" height="20">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
                     </ul>
-                </div class="form-futer-box">
-                <form action="" class="js-speaker-form form-futer">
-                    <div class="form-field-futer icons-futer">
+                </div class="form-box">
+                <form action="" class="js-speaker-form form-box__futer">
+                    <div class="form-box__icons-futer">
                         <h2>ПОДПИШИСЬ НА РАССЫЛКУ</h2>
                         <!-- <label for="mail">Почта</label>-->
-                        <ul class="form-futer-icon">
+                        <ul class="form-box__futer-icon">
                             <li>
                                 <input type="email" name="mail" id="mail" placeholder="E-mail" />
                             </li>
                             <li>
-                                <button class="button button-futer" type="submit">Подписаться<svg class="icon-icon-send"
-                                        width="32" height="32">
+                                <button class="button form-box__button-futer" type="submit">Подписаться<svg
+                                        class="icon-icon-send" width="32" height="32">
                                         <use href="./images/icons.svg#icon-icon-send"></use>
                                     </svg></button>
                             </li>
@@ -228,7 +230,6 @@
                 </form>
             </div>
         </footer>
-    
 
 
 </body>
