--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
             <nav>
                 <ul class="site-nav list">
                     <!--<li lang="en" class="nav-item site-nav-logo"><a href="WebStudio">Web<span>Studio</span></a></li>-->
-                    <li class="nav-item"><a href="./index.html" class="nav-item-link link current">Студия</a></li>
-                    <li class="nav-item"><a href="./portfolio.html" class="nav-item-link link">Портфолио</a></li>
-                    <li class="nav-item"><a href="Контакты" class="nav-item-link link">Контакты</a></li>
+                    <li class="site-nav__item"><a href="./index.html" class="link site-nav__current">Студия</a></li>
+                    <li class="site-nav__item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="site-nav__item"><a href="Контакты" class="link">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="link-items list">
-                <li class="nav-link-item" lang="en">
+            <ul class="nav-link list">
+                <li class="nav-link__item" lang="en">
                     <a href="mailto:info@devstudio.com" class="current">
-                        <svg class="icon-envelope" width="16" height="12">
+                        <svg class="nav-link__icon-envelope" width="16" height="12">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com
@@ -40,8 +40,9 @@
                     </a>
     
                 </li>
-                <li class="nav-link-item">
-                    <a href="tel:+380961111111" class="current"><svg class="icon-smartphone" width="10" height="16">
+                <li class="nav-link__item">
+                    <a href="tel:+380961111111" class="current">
+                        <svg class="nav-link__icon-smartphone" width="10" height="16">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
