--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+
     <!-- Шапка сайта -->
     <header class="page-header">
         <div class="container main-nav">
@@ -27,15 +28,15 @@
             <nav>
                 <ul class="site-nav list">
                     <!--<li lang="en" class="nav-item site-nav-logo"><a href="WebStudio">Web<span>Studio</span></a></li>-->
-                    <li class="nav-item"><a href="./index.html" class="nav-item-link link">Студия</a></li>
-                    <li class="nav-item"><a href="./portfolio.html" class="nav-item-link link current">Портфолио</a></li>
-                    <li class="nav-item"><a href="Контакты" class="nav-item-link link">Контакты</a></li>
+                    <li class="site-nav__item"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="site-nav__item"><a href="./portfolio.html" class="link site-nav__current">Портфолио</a></li>
+                    <li class="site-nav__item"><a href="Контакты" class="link">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="link-items list">
-                <li class="nav-link-item" lang="en">
+            <ul class="nav-link list">
+                <li class="nav-link__item" lang="en">
                     <a href="mailto:info@devstudio.com" class="current">
-                        <svg class="icon-envelope" width="16" height="12">
+                        <svg class="nav-link__icon-envelope" width="16" height="12">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com
@@ -43,8 +44,9 @@
                     </a>
     
                 </li>
-                <li class="nav-link-item">
-                    <a href="tel:+380961111111" class="current"><svg class="icon-smartphone" width="10" height="16">
+                <li class="nav-link__item">
+                    <a href="tel:+380961111111" class="current">
+                        <svg class="nav-link__icon-smartphone" width="10" height="16">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
@@ -55,36 +57,34 @@
             </ul>
         </div>
     </header>
-  
-   
     <main>
 
         <!--Наше портфолио  -->
         <section class="section portfolio">
             <div class="container ">
                 <h2 class="visually-hidden">Наше портфолио</h2>
-                <ul class="portfolio-list list">
-                    <li class="portfolio-list-item"><button class="portfolio-button" type="button">Все</button></li>
-                    <li class="portfolio-list-item"><button class="portfolio-button" type="button">Веб-сайты</button>
+                <ul class="portfolio__list list">
+                    <li class="portfolio__list-item"><button class="portfolio-button" type="button">Все</button></li>
+                    <li class="portfolio__list-item"><button class="portfolio-button" type="button">Веб-сайты</button>
                     </li>
-                    <li class="portfolio-list-item"><button class="portfolio-button" type="button">Приложения</button>
+                    <li class="portfolio__list-item"><button class="portfolio-button" type="button">Приложения</button>
                     </li>
-                    <li class="portfolio-list-item"><button class="portfolio-button" type="button">Дизайн</button></li>
-                    <li class="portfolio-list-item"><button class="portfolio-button" type="button">Маркетинг</button>
+                    <li class="portfolio__list-item"><button class="portfolio-button" type="button">Дизайн</button></li>
+                    <li class="portfolio__list-item"><button class="portfolio-button" type="button">Маркетинг</button>
                     </li>
                 </ul>
                 <ul class="portfolio-img list">
-                    <li class="portfolio-img-item">
-                        <a class="portfolio-img-over">
-                        <div class="portfolio-img-overl">
+                    <li class="portfolio-img__item">
+                        <a class="portfolio-img__over">
+                        <div class="portfolio-img__overl">
                             <img src="./images/portfolio/img-portfolio1.jpg" alt="Технокряк" width="370" height="294" />
-                            <div class="portfolio-text-overl">
+                            <div class="portfolio-img__text-overl">
                                 <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
                         </div>
-                            <div class="portfolio-text">
+                            <div class="portfolio-img__text">
                                 <h3>Технокряк </h3>
                                 <p>Веб-сайт</p>
                                
@@ -93,63 +93,63 @@
                         </a>
                     </li>
 
-                    <li class="portfolio-img-item">
+                    <li class="portfolio-img__item">
                         <img src="./images/portfolio/img-portfolio2.jpg" alt="Постер New Orlean vs Golden Star"
                             width="370" height="294" />
-                        <div class="portfolio-text">
+                        <div class="portfolio-img__text">
                             <h3>Постер <span lang="en">Orlean vs Golden Star</span></h3>
                             <p>Дизайн</p>
                         </div>
                     </li>
-                    <li class="portfolio-img-item">
+                    <li class="portfolio-img__item">
                         <img src="./images/portfolio/img-portfolio3.jpg" alt="Ресторан Seafood" width="370"
                             height="294" />
-                        <div class="portfolio-text">
+                        <div class="portfolio-img__text">
                             <h3>Ресторан <span lang="en">Seafood</span></h3>
                             <p>Приложение</p>
                         </div>
                     </li>
-                    <li class="portfolio-img-item">
+                    <li class="portfolio-img__item">
                         <img src="./images/portfolio/img-portfolio4.jpg" alt="Проект Prime" width="370" height="294" />
-                        <div class="portfolio-text">
+                        <div class="portfolio-img__text">
                             <h3>Проект <span lang="en">Prime</span></h3>
                             <p>Маркетинг</p>
                         </div>
                     </li>
-                    <li class="portfolio-img-item">
+                    <li class="portfolio-img__item">
                         <img src="./images/portfolio/img-portfolio5.jpg" alt="Проект Boxes" width="370" height="294" />
-                        <div class="portfolio-text">
+                        <div class="portfolio-img__text">
                             <h3>Проект<span lang="en">Boxes</span>span</h3>
                             <p>Приложение</p>
                         </div>
                     </li>
-                    <li class="portfolio-img-item">
+                    <li class="portfolio-img__item">
                         <img src="./images/portfolio/img-portfolio6.jpg" alt="Inspiration has no Borders" width="370"
                             height="294" />
-                        <div class="portfolio-text">
+                        <div class="portfolio-img__text">
                             <h3 lang="en">Inspiration has no Borders</h3>
                             <p>Веб-сайт</p>
                         </div>
                     </li>
-                    <li class="portfolio-img-item">
+                    <li class="portfolio-img__item">
                         <img src="./images/portfolio/img-portfolio7.jpg" alt="Издание Limited Edition" width="370"
                             height="294" />
-                        <div class="portfolio-text">
+                        <div class="portfolio-img__text">
                             <h3>Издание <span lang="en">Edition</span> </h3>
                             <p>Дизайн</p>
                         </div>
                     </li>
-                    <li class="portfolio-img-item">
+                    <li class="portfolio-img__item">
                         <img src="./images/portfolio/img-portfolio8.jpg" alt="Проект LAB" width="370" height="294" />
-                        <div class="portfolio-text">
+                        <div class="portfolio-img__text">
                             <h3>Проект <span lang="en">LAB</span></h3>
                             <p>Маркетинг</p>
                         </div>
                     </li>
-                    <li class="portfolio-img-item">
+                    <li class="portfolio-img__item">
                         <img src="./images/portfolio/img-portfolio9.jpg" alt="Growing Business" width="370"
                             height="294" />
-                        <div class="portfolio-text">
+                        <div class="portfolio-img__text">
                             <h3 lang="en">Growing Business</h3>
                             <p>Приложение</p>
                         </div>
